--- a/cv.tex
+++ b/cv.tex
@@ -45,7 +45,7 @@
 %----------------------------------------------------------------------------------------
 \newcommand{\project}[3]{
     \begin{tabular}{>{\raggedleft}p{2.2cm}|p{17cm}}
-        \textsc{#1} & #2 \\
+        \textsc{#1} & \textcolor{NavyBlue}{#2} \\
                     & \footnotesize{#3} \\
     \end{tabular}
 }
@@ -118,10 +118,10 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
     \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering} &   9.6/10.0\\
                      & \textbf{Indian Institute of Technology}, Kanpur\\
 
-    \textsc{July 2011} & 12th Board, \textsc{CBSE} Board                    &   91.4\% \\
+    \textsc{Jul 2011} & 12th Board, \textsc{CBSE} Board                    &   91.4\% \\
                        & \normalsize\textbf{The Emerald Heights International School}, Indore\\
 
-    \textsc{July 2011} & 10th Board, \textsc{ICSE} Board                    &   95.4\% \\
+    \textsc{Jul 2011} & 10th Board, \textsc{ICSE} Board                    &   95.4\% \\
                        & \normalsize\textbf{The Laurels School International}, Indore \\
 
 \end{tabular}
@@ -308,7 +308,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Side Projects}
 
-\project {July 2014}
+\project {Jul 2014}
          {OARS}
          {OARS is a \textbf{AngularJS} based front-end for the
           courses offered in IIT Kanpur. It was created as a
@@ -318,7 +318,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
           project is now maintained by \textbf{Navya}
           \href{https://github.com/navya/oars} {[Git Repo]} }
 
-\project {March 2014}
+\project {Mar 2014}
          {GYPH}
          {GYPH or Get Your Personal Homepage
           is a simple hassle-free homepage designer for students who are not
@@ -326,18 +326,20 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
           interface for editing themes and downloading them for personal use.
           \href{http://gyph2.herokuapp.com/} {[Website]} }
 
-\project {August 2013}
+\project {Aug 2013}
          {ShuffleRun}
          {ShuffleRun is a web based music player which selects a track from the
           users library according to her running speed.
           The project recieved an honorable mention in \textbf{Yahoo!  HackU 2013} IIT Kanpur round.
           \href{https://github.com/srijanshetty/ShuffleRun} {[Git Repo]}}
 
-\project {July 2013}
-         {\href{www.udghosh.org}{Website of Udghosh}, the annual sports-fest of IIT Kanpur}
+\project {Jul 2013}
+         {\href{www.udghosh.org}{Website of Udghosh}}
+         {Designer and webmaster of the website of Udghosh, the annual sports-fest of IIT Kanpur.}
 
 \project {Dec 2012}
          {\href{http://www.iitk.ac.in/hall5}{Website of Hall 5}, IIT Kanpur }
+         {Designer and webmaster of the website of Hall of residence 5.}
 
 \project {Summer 2012}
          {Voicing, Archiving and Networking the Information \textsc{(VANI)}, IIT Kanpur}
@@ -356,7 +358,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
           \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}
           {[Documentation]} }
 
-\projectlist {July 2013}
+\projectlist {Jul 2013}
          {Projects on Github}
          {
              \begin{itemize}[leftmargin=*]
@@ -377,8 +379,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \section {Social, Leadership and Artistic Skills}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}p{15cm}}
-
+\itemlist{
     ---   & Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com} \\
 
     2013-2014    & \textbf{Hacker, Navya, FOSS Group IIT Kanpur}
@@ -442,8 +443,11 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
     2010 & Basic training in \textbf{Indian Classical Music}. (Prayag Sangeet Samiti Allahabad). \\
 
     2009 & Qualified for the semi-finals of \textbf{Outlook SpeakOut Debate}. \\
+}
 
-\end{tabular}
+%----------------------------------------------------------------------------------------
+%   COURSE WORK
+%----------------------------------------------------------------------------------------
 
 \section{CourseWork}
 
